--- a/DestkopTrivialWiki/DestkopTrivialWiki/FriendsGame.xaml
+++ b/DestkopTrivialWiki/DestkopTrivialWiki/FriendsGame.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="DestkopTrivialWiki.GeneralGamePage"
+﻿<Page x:Class="DestkopTrivialWiki.FriendsGame"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,16 +6,15 @@
       xmlns:local="clr-namespace:DestkopTrivialWiki"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="1000"
+      Title="FriendsGame"
       Background="#FF323232"
-      Title="GeneralGamePage"
-      xmlns:customText="clr-namespace:DestkopTrivialWiki">
-
+      xmlns:customText="clr-namespace:DestkopTrivialWiki"
+      >
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="2.5*"/>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="7*"/>
+            <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
@@ -44,14 +43,14 @@
             HorizontalAlignment="Stretch" 
             TextAlignment="Center"
             Grid.Row="0" Grid.Column="1" 
-            Grid.ColumnSpan="3"
+            Grid.ColumnSpan="2"
             Margin="20" VerticalAlignment="Center"
             Stroke="Black" StrokeThickness="2"
             FontSize="30" Fill="#FFFFFDFD">
-            Best player : Johnny , Score : 50
+            Correct answers : 5 / 10
         </customText:OutlinedTextBlock>
         <Grid Grid.Row="1" Grid.RowSpan="2" 
-              Grid.Column="0"  Grid.ColumnSpan="2" 
+              Grid.Column="0"  Grid.ColumnSpan="3" 
               Margin="10,10,0,10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
@@ -77,32 +76,5 @@
             <Button Margin="50" Grid.Row="2" Grid.Column="0" FontSize="24">Answer 3</Button>
             <Button Margin="50" Grid.Row="2" Grid.Column="1" FontSize="24">Answer 4</Button>
         </Grid>
-        <Grid Grid.Row="1" Grid.Column="2"
-              Grid.RowSpan="2"
-              Margin="10,10,10,10" Grid.ColumnSpan="2">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="15*"/>
-                <RowDefinition Height="1*"/>
-                <RowDefinition Height="1*"/>
-            </Grid.RowDefinitions>
-            <ListBox IsSynchronizedWithCurrentItem="True" local:ListBoxExtenders.AutoScrollToCurrentItem="True" 
-                     Grid.Row="0"
-                     Name="ChatBox" SourceUpdated="ChatBox_SourceUpdated"
-                     >
-            </ListBox>
-
-            <TextBox Grid.Row="1"
-                     Name="MessageSrc">
-            </TextBox>
-            <Button Name="SendBtn" 
-                    Grid.Row="2"
-                    HorizontalAlignment="Center"
-                    Padding="10,0,10,0"
-                    Click="SendBtn_OnClick">
-                Send
-            </Button>
-
-        </Grid>
-
     </Grid>
 </Page>
