--- a/DestkopTrivialWiki/DestkopTrivialWiki/MainPage.xaml
+++ b/DestkopTrivialWiki/DestkopTrivialWiki/MainPage.xaml
@@ -8,8 +8,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="600"
       d:DesignWidth="1000"
-      ShowsNavigationUI="False"
-      Title="WikiTrivia"
+      
       Background="#FF323232" 
       >
     <Grid>
@@ -21,16 +20,17 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
             <RowDefinition Height="7*"/>
-            <RowDefinition Height="2*"/>
+            <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
-        <Button Grid.Row="0" 
-                Grid.Column="0"
-                Background="#FF323232"
-                Name="HomeBtn"
-                BorderBrush="#FF323232"
-             >
-            <Image Source="D:/Licenta/TrivialWiki/DestkopTrivialWiki/DestkopTrivialWiki/Images/wikipedia-icon2.png"
+        <Image Grid.Row="0" Grid.RowSpan="3"
+               Grid.Column="0" Grid.ColumnSpan="3"
+               Stretch="Fill"
+               Source="D:/Licenta/TrivialWiki/DestkopTrivialWiki/DestkopTrivialWiki/Images/books-trees-abstract.jpg"
+            />
+        <Image Source="D:/Licenta/TrivialWiki/DestkopTrivialWiki/DestkopTrivialWiki/Images/wikipedia-icon2.png"
                Margin="2" 
+               Grid.Row="0" 
+                Grid.Column="0"
                Height="100" 
                Width="100"
                HorizontalAlignment="Center"
@@ -39,7 +39,6 @@
                MaxWidth="150" 
                MinWidth="50"
                />
-        </Button>
         <Button Content="Play" 
                 Grid.Column="1" 
                 Grid.Row="0" 
@@ -61,14 +60,17 @@
                 >
             <StackPanel  
                     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                    Background="DarkSlateGray">
+                    Background="DarkRed">
                 <Button Content="Log in" 
                         Name="LoginBtn" 
                         BorderThickness="0"
-                        HorizontalAlignment="Stretch" 
+                        HorizontalAlignment="Stretch"
                         VerticalAlignment="Center"  
+                        HorizontalContentAlignment="Left"
+                        VerticalContentAlignment="Center"
                         Margin="0,0,20,10" 
-                        FontSize="18" 
+                        FontSize="18"
+                        Foreground="White"
                         Padding="10,5" 
                         Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
                         Click="LoginBtn_OnClick">
@@ -77,19 +79,43 @@
                         Name="ManageBtn"
                         HorizontalAlignment="Stretch" 
                         VerticalAlignment="Top"  
+                        HorizontalContentAlignment="Left"
+                        VerticalContentAlignment="Center"
                         Margin="0,0,20,10" 
                         FontSize="18" 
+                        Foreground="White"
                         Padding="10,5" 
+                        Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
                         Click="ManageBtn_OnClick" 
-                        Visibility="Hidden">
+                        Visibility="Collapsed">
+                </Button>
+                <Button Content="Log out" 
+                        Name="LogoutBtn"
+                        HorizontalAlignment="Stretch" 
+                        VerticalAlignment="Top"  
+                        HorizontalContentAlignment="Left"
+                        VerticalContentAlignment="Center"
+                        Margin="0,0,20,10" 
+                        FontSize="18" 
+                        Foreground="White"
+                        Padding="10,5" 
+                        Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
+                        Click="LogoutBtn_OnClick" 
+                        Visibility="Collapsed">
                 </Button>
             </StackPanel>
         </Border>
 
-        <Button Grid.Row="1" Grid.Column="0" Name="SideBtn"
+        <Button Grid.Row="1" Grid.Column="0" 
+                Name="SideBtn"
                 Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" 
-                Width="32" Height="32" FontSize="16" VerticalAlignment="Center" 
-                HorizontalAlignment="Left" Background="White" Click="SideBtn_OnClick"
+                Width="32" Height="32" 
+                Background="SlateGray"
+                FontSize="16"
+                Foreground="DarkRed"
+                VerticalAlignment="Center" 
+                HorizontalAlignment="Left"
+                Click="SideBtn_OnClick"
                 >&gt;</Button>
 
 
